--- a/public/listing.html
+++ b/public/listing.html
@@ -201,21 +201,14 @@
         <div class="one wide column"></div>
         <div id="listing-column" class="ten wide column">
           <div id="title-section">
-            <button id="listing-header-buttons" class="ui button ">
-              <i class="save icon"></i>Save
-            </button>
-            <button
-              id="listing-header-buttons"
-              class="ui button listing-header-buttons"
-            >
-              <i class="share icon"></i>Share
-            </button>
+            
             <hr />
           </div>
           <div id="about-section">
             <hr />
           </div>
           <div id="location-section">
+            <p class="section-header">Location</p>
             <div
               style="margin-top: .5rem; position: relative;"
               id="map-container"
@@ -223,9 +216,14 @@
               <div id="map"></div>
               <div id="demo"></div>
             </div>
-            <hr />
+            <div id="get-direct" >
+              <a id="location-address"></a>
+            </div>
+            <hr>
           </div>
-          <div id="youtube"></div>
+          <div id="youtube">
+            <p class="section-header">Hours</p>
+          </div>
         </div>
         <div class="four wide column">
           <div id="store-info-div">
@@ -266,6 +264,15 @@
               </div>
             </div>
           </div>
+          <button  id="listing-header-buttons" class="ui button ">
+              <i class="save icon"></i>Save
+            </button>
+            <button
+              id="listing-header-buttons"
+              class="ui button listing-header-buttons"
+            >
+              <i class="share icon"></i>Share
+            </button>
         </div>
         <div class="one wide column"></div>
       </div>
