claimed listings/client users adding/claiming listings

--- a/public/index.html
+++ b/public/index.html
@@ -139,14 +139,15 @@
           <p style="margin-left: 3rem;" id="search-title">Find Top Hair Loss Professionals</p>
           <p style="margin-left: 3rem;" id="search-subtitle">From the web's most trusted directory</p>
           <div style="margin-left: 3rem;" class="ui search">
-            <div class="ui icon input search">
+            <div class="ui left icon action input search">
+              <i id="search-icon" class="search icon"></i>
               <input
                 id="search-semantic"
                 class="prompt"
                 type="text"
                 placeholder="Ex. Hair Restoration, Hair Transplant, Laser Therapy"
               />
-              <i id="search-icon" class="search icon"></i>
+              <button id="search-button" style="background: #1F7A8C; color: #ffffff;" class="ui rounded button">Search</button>
               <div style="margin-left: 8rem;" class="results"></div>
             </div>
             <p id="landing-list-p">
