more responsive, step 2 started

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
           id="search-column"
           class="nine wide computer sixteen wide mobile column"
         >
-        <!-- title  -->
+          <!-- title  -->
           <p style="margin-left: 3rem;" id="search-title">
             Find Top Hair Loss Professionals
           </p>
@@ -165,77 +165,143 @@
         <div id="how-it-next" class="six wide column"></div>
 
         <div id="how-it-col" class="ten wide left aligned column">
-          <p id="how-it-works">Three Easy Steps <i class="level down alternate icon"></i> </p>
+          <p id="how-it-works">
+            Three Easy Steps <i class="level down alternate icon"></i>
+          </p>
         </div>
       </div>
       <div id="step-1" class="row">
         <div id="step-1-col-l" class="six wide column">
-          <p id="step-1-num" class="title_l_blue" >1.</p>
-          <p id="step-1-title" >Arrival</p>
+          <p id="step-1-num" class="title_l_blue">1.</p>
+          <p id="step-1-title">Arrival</p>
           <div id="step-1-list" class="ui list step-list">
-              <div style="margin-bottom: 2.5rem;" class="item">
-                <i style="color: #8b786d;" class="large map pin icon"></i>
-                <div class="content step-list-content">
-                  <p id="step-1-content">Just type in the <strong style="font-size: 35px;font-weight: 700; color: #1F7A8C;" >Title</strong>, <strong style="font-size: 35px; font-weight: 700; color: #1F7A8C;" >Category</strong>, or <strong style="font-size: 35px; font-weight: 700; color: #1F7A8C;" >Club</strong> and instantly search our directory of thousands of qualified specialist and products.</p>
-                  <p style="font-family: 'Raleway'; font-size: 45px;font-weight: 700; color: #8b786d;" >Step 1 <i style="color: #3aa7a3;" class="check icon"></i></p>
-                </div>
+            <div style="margin-bottom: 2.5rem;" class="item">
+              <i style="color: #8b786d;" class="large map pin icon"></i>
+              <div class="content step-list-content">
+                <p id="step-1-content">
+                  Just type in the
+                  <strong
+                    style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
+                    >Title</strong
+                  >,
+                  <strong
+                    style="font-size: 35px; font-weight: 700; color: #1F7A8C;"
+                    >Category</strong
+                  >, or
+                  <strong
+                    style="font-size: 35px; font-weight: 700; color: #1F7A8C;"
+                    >Club</strong
+                  >
+                  and instantly search our directory of thousands of qualified
+                  specialist and products.
+                </p>
+                <p
+                  style="font-family: 'Raleway'; font-size: 45px;font-weight: 700; color: #8b786d;"
+                >
+                  Step 1 <i style="color: #3aa7a3;" class="check icon"></i>
+                </p>
               </div>
             </div>
+          </div>
         </div>
         <div id="step-1-col-b" class="ten wide middle aligned centered column">
-            <a href="https://gyazo.com/a836edcfa84d6aefd40e1f6a525c4b41"><img id="step-1-gif-img" src="https://i.gyazo.com/a836edcfa84d6aefd40e1f6a525c4b41.gif" class="ui huge image" alt="Image from Gyazo"  /></a>
-          </div>
+          <a href="https://gyazo.com/a836edcfa84d6aefd40e1f6a525c4b41"
+            ><img
+              id="step-1-gif-img"
+              src="https://i.gyazo.com/a836edcfa84d6aefd40e1f6a525c4b41.gif"
+              class="ui huge image"
+              alt="Image from Gyazo"
+          /></a>
+        </div>
       </div>
       <div id="step-2" class="row">
-          <div id="step-2-col-b" class="six wide left aligned column">
-                  <div id="step-2-demo-list" class="ui celled full width list">
-                      <div class="item">
-                        <img class="ui tiny avatar image" src="./images/ISHRS.png">
-                        <div class="content">
-                          <div id="list-demo-header" class="header">Snickerdoodle</div>
-                          <p id="list-demo-p"></p>
-                        </div>
-                      </div>
-                      <div class="item">
-                        <img class="ui avatar image" src="/images/avatar/small/daniel.jpg">
-                        <div class="content">
-                          <div class="header">Poodle</div>
-                          A poodle, its pretty basic
-                        </div>
-                      </div>
-                      <div class="item">
-                        <img class="ui avatar image" src="/images/avatar/small/daniel.jpg">
-                        <div class="content">
-                          <div class="header">Paulo</div>
-                          He's also a dog
-                        </div>
-                      </div>
-                    </div>
-          </div>
-          <div id="step-2-col-l" class="ten wide column">
-            <p id="step-2-num" class="title_l_blue" >2.</p>
-            <p id="step-2-title" >Quickly Find Results</p>
-            <div id="step-2-list" class="ui list step-list">
-                <div style="margin-bottom: 2.5rem;" class="item">
-                  <i style="color: #8b786d;" class="big search icon"></i>
-                  <div class="content step-list-content">
-                    <p id="step-2-content">
-                      Immediately find thousands of the <strong style="font-size: 35px;font-weight: 700; color: #1F7A8C;"  > Most Trusted Specialists and Brands</strong> from the most objective, comprehensive, and trusted directory.
-                    </p>
-                  </div>
-                </div>
-                <div style="margin-bottom: 2.5rem;" class="item">
-                    <i style="color: #8b786d;" class="big bookmark icon"></i>
-                    <div class="content step-list-content">
-                      <p id="step-2-content">
-                        Even save your <strong style="font-size: 35px;font-weight: 700; color: #1F7A8C;" >Top Specialists</strong> for later.
-                      </p>
-                      <p style="font-family: 'Raleway'; font-size: 45px;font-weight: 700; color: #8b786d;" >Step 2 <i style="color: #3aa7a3;" class="check icon"></i></p>
-                    </div>
-                  </div>
+        <div id="step-2-col-b" class="six wide left aligned column">
+          <div id="step-2-demo-list" class="ui celled full width list">
+            <div id="list-demo-item" class="item ">
+              <div class="left floated content">
+                <img class="ui tiny avatar image" src="./images/ISHRS.png" />
               </div>
+              <div class="content">
+                <div id="list-demo-header" class="header">ISHRS</div>
+                <p id="list-demo-p">
+                  The leading association of hair therapy specialists
+                </p>
+              </div>
+            </div>
+            <div id="list-demo-item" class="item ">
+              <div class="left floated content">
+                <img class="ui tiny avatar image" src="./images/Hair Club.webp" />
+              </div>
+              <div class="content">
+                <div id="list-demo-header" class="header">The Hair Club</div>
+                <p id="list-demo-p">
+                  The leading association of Laser Therapy specialists
+                </p>
+              </div>
+            </div>
+            <div id="list-demo-item" class="item ">
+              <div class="left floated content">
+                <img class="ui tiny avatar image" src="./images/Artas.png" />
+              </div>
+              <div class="content">
+                <div id="list-demo-header" class="header">ARTAS</div>
+                <p id="list-demo-p">
+                  The leading association of Robotic hair treatment practices. 
+                </p>
+              </div>
+            </div>
+            <div id="list-demo-item" class="item ">
+              <div class="left floated content">
+                <img class="ui tiny avatar image" src="./images/WTS.png" />
+              </div>
+              <div class="content">
+                <div id="list-demo-header" class="header">WTS</div>
+                <p id="list-demo-p">
+                  The leading association of hair therapy specialists
+                </p>
+              </div>
+            </div>
           </div>
         </div>
+        <div id="step-2-col-l" class="ten wide column">
+          <p id="step-2-num" class="title_l_blue">2.</p>
+          <p id="step-2-title">Quickly Find Results</p>
+          <div id="step-2-list" class="ui list step-list">
+            <div style="margin-bottom: 2.5rem;" class="item">
+              <i style="color: #8b786d;" class="big search icon"></i>
+              <div class="content step-list-content">
+                <p id="step-2-content">
+                  Immediately find thousands of the
+                  <strong
+                    style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
+                  >
+                    Most Trusted Specialists and Brands</strong
+                  >
+                  from the most objective, comprehensive, and trusted directory.
+                </p>
+              </div>
+            </div>
+            <div style="margin-bottom: 2.5rem;" class="item">
+              <i style="color: #8b786d;" class="big bookmark icon"></i>
+              <div class="content step-list-content">
+                <p id="step-2-content">
+                  Even save your
+                  <strong
+                    style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
+                    >Top Specialists</strong
+                  >
+                  for later.
+                </p>
+                <p
+                  style="font-family: 'Raleway'; font-size: 45px;font-weight: 700; color: #8b786d;"
+                >
+                  Step 2 <i style="color: #3aa7a3;" class="check icon"></i>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="./js/css.js"></script>
