--- a/public/index.html
+++ b/public/index.html
@@ -91,12 +91,15 @@
         </div>
 
         <!-- magazine image  -->
-        <div class="seven wide column">
-          <img
-            id="magazine"
-            class="ui massive image"
-            src="https://www.frameweb.com/img/covers/frame/frame132.png"
-          />
+        <!-- stock magazine image  -->
+        <div class="seven wide middle aligned column">
+              <img
+              id="magazine"
+              class="ui huge centered image"
+              src="https://www.frameweb.com/img/covers/frame/frame132.png"
+
+            >
+
         </div>
 
         <!-- search title, subtext, bar, and cta for professionals  -->
