sign in style +

--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,8 @@
           </div>
           <!-- register button  -->
           <div id="register-column" class="two wide column">
-            <div id="register-button">
-              <p class="top-button" id="register">Register</p>
+            <div style="border-bottom: solid; border-color: #8b786d; border-width: 5px;" id="listBusiness-button">
+              <p style="color: white;" class="top-button" id="register"><i class="store icon" ></i>List Your Business</p>
             </div>
           </div>
         </div>
