--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -1,38 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"
-    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.8/dist/semantic.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.8/dist/semantic.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"
-    integrity="sha256-J6UlS3kpnhiSiNQ9lGoV9Q94ZpIPff3UZcR0dDwIT6g=" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Roboto:100&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"
+      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.8/dist/semantic.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.8/dist/semantic.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"
+      integrity="sha256-J6UlS3kpnhiSiNQ9lGoV9Q94ZpIPff3UZcR0dDwIT6g="
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Roboto:100&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400|Raleway:100,400,500,700,800,900&display=swap"
       rel="stylesheet"
     />
-  <link rel="stylesheet" type="text/css" href="./css/dashboard.css" />
-  <link rel="stylesheet" type="text/css" href="./css/styles.css" />
-  <link rel="stylesheet" type="text/css" href="./css/search.listings.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="./css/dashboard.css" /> -->
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/search.listings.css" />
+  </head>
 
-</head>
-
-<body>
-  <div id="loader-div">
+  <body>
+    <!-- <div id="loader-div">
           <div class="ui active inverted dimmer">
             <div class="ui text loader">Loading</div>
           </div>
           <p></p>
-  </div>
-  <div class="row" id="top-menu-row">
+  </div> -->
+    <div class="row" id="top-menu-row">
       <div class="ui grid" id="landing-grid">
         <div style="padding: .5rem;" class="one wide column">
           <img
@@ -53,49 +69,68 @@
         </div>
         <!-- register button  -->
         <div id="register-column" class="two wide column">
-          <div style="border-bottom: solid; border-color: #8b786d; border-width: 5px;" id="listBusiness-button">
-            <p style="color: white;" class="top-button" id="register"><i class="store icon" ></i>List Your Business</p>
+          <div
+            style="border-bottom: solid; border-color: #8b786d; border-width: 5px;"
+            id="listBusiness-button"
+          >
+            <p style="color: white;" class="top-button" id="register">
+              <i class="store icon"></i>List Your Business
+            </p>
           </div>
         </div>
       </div>
     </div>
-  <div id="page-container">
-    <div style="width: 100%; margin: 0px;" class="ui grid">
-      <div class="row">
-        <div class="one wide column"></div>
-        <div class="fourteen wide column">
-          <p id="listing-column-titlte" >Search Results for: </p>
-          <hr style="padding: 0px;" >
-        </div>
-        <div class="one wide column"></div>
-        <div class="one wide column"></div>
-        <div id="listings-column" class="seven wide column"></div>
-        <div style="margin-top: 1rem;" class="seven wide column">
-          <div id="preview-container">
-              <div  class="ui search"  >
+    <div id="page-container">
+      <div style="width: 100%; margin: 0px;" class="ui grid">
+        <div class="row">
+          <div class="fifteen wide column">
+            <p id="listing-column-title">Search Results for:</p>
+            <hr style="padding: 0px;" />
+          </div>
+          <div id="listings-column" class="nine wide column">
+            
+          </div>
+          <div style="margin-top: 1rem;" class="six wide column">
+            <div id="preview-container">
+              <div class="ui search">
                 <h1>Search Listings</h1>
-                  <div id="search" class="ui icon input search">
-                    <input style="width: 100%;" id="search-semantic" class="prompt" type="text" placeholder="Ex. Hair Restoration, Hair Transplant, Laser Therapy">
-                    <i id="search-icon" class="search icon"></i>
-                    <div style="margin-left: 8rem;" class="results"></div>
-                  </div>
-                  <button style="margin-top: 1rem;" class="ui button" id="search-button" >Search</button>
+                <div id="search" class="ui icon input search">
+                  <input
+                    style="width: 100%;"
+                    id="search-semantic"
+                    class="prompt"
+                    type="text"
+                    placeholder="Ex. Hair Restoration, Hair Transplant, Laser Therapy"
+                  />
+                  <i id="search-icon" class="search icon"></i>
+                  <div style="margin-left: 8rem;" class="results"></div>
                 </div>
-          </div>
-          <div style="margin-top: .5rem; position: relative;" id="map-container">
-            <div id="map"></div>
-            <div id="demo"></div>
+                <button
+                  style="margin-top: 1rem;"
+                  class="ui button"
+                  id="search-button"
+                >
+                  Search
+                </button>
+              </div>
+            </div>
+            <div
+              style="margin-top: .5rem; position: relative;"
+              id="map-container"
+            >
+              <div id="map"></div>
+              <div id="demo"></div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzwFcR1tSuszjACQkI67oXrQevIpBIuFo&callback="
-    async defer></script>
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzwFcR1tSuszjACQkI67oXrQevIpBIuFo&callback="
+      async
+      defer
+    ></script>
     <script src="./js/search.listings.js" type="text/javascript"></script>
-
-
-</body>
-
+  </body>
 </html>
