--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -42,85 +42,79 @@
   </head>
 
   <body>
-    <!-- <div id="loader-div">
-          <div class="ui active inverted dimmer">
-            <div class="ui text loader">Loading</div>
+    <div id="loader-div">
+      <div class="ui active inverted dimmer">
+        <div style="color: #2ca6a4;" class="ui text loader">Loading</div>
+      </div>
+      <p></p>
+    </div>
+    <div id="page-container">
+      <div class="row" id="top-menu-row">
+        <div class="ui grid" id="landing-grid">
+          <div id="back-column" class="one wide column">
+            <div id="back-button">
+              <p class="top-button" id="sign-in"> <i class="left arrow icon"></i> </p>
+            </div>
           </div>
-          <p></p>
-  </div> -->
-    <div class="row" id="top-menu-row">
-      <div class="ui grid" id="landing-grid">
-        <div style="padding: .5rem;" class="one wide column">
-          <img
-            style="margin-left: 1rem; padding: 0px;"
-            id="ha-logo-image"
-            src="./images/logo-symbol-w.png"
-          />
-        </div>
-        <div style="padding: 1rem;" class="nine wide middle aligned column">
-          <p id="ha-title">Hair Authority Directory</p>
-        </div>
-        <div id="dashboard-column" class="two wide column"></div>
-        <div id="sign-in-column" class="two wide column">
-          <!-- sign in button  -->
-          <div id="sign-in-button">
-            <p class="top-button" id="sign-in">Sign In</p>
+          <div style="padding: .5rem;" class="one wide column">
+            <img
+              style="margin-left: 1rem; padding: 0px;"
+              id="ha-logo-image"
+              src="./images/logo-symbol-w.png"
+            />
           </div>
-        </div>
-        <!-- register button  -->
-        <div id="register-column" class="two wide column">
-          <div
-            style="border-bottom: solid; border-color: #8b786d; border-width: 5px;"
-            id="listBusiness-button"
-          >
-            <p style="color: white;" class="top-button" id="register">
-              <i class="store icon"></i>List Your Business
-            </p>
+          <div style="padding: 1rem;" class="nine wide middle aligned column">
+            <p id="ha-title">Hair Authority Directory</p>
+          </div>
+          <div id="dashboard-column" class="one wide column"></div>
+          <div id="sign-in-column" class="two wide column">
+            <!-- sign in button  -->
+            <div id="sign-in-button">
+              <p class="top-button" id="sign-in">Sign In</p>
+            </div>
+          </div>
+          <!-- register button  -->
+          <div id="register-column" class="two wide column">
+            <div
+              style="border-bottom: solid; border-color: #8b786d; border-width: 5px;"
+              id="listBusiness-button"
+            >
+              <p style="color: white;" class="top-button" id="register">
+                <i class="store icon"></i>List Your Business
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div id="page-container">
-      <div style="width: 100%; margin: 0px;" class="ui grid">
-        <div class="row">
-          <div class="fifteen wide column">
-            <p id="listing-column-title">Search Results for:</p>
-            <hr style="padding: 0px;" />
-          </div>
-          <div id="listings-column" class="nine wide column">
-            
-          </div>
-          <div style="margin-top: 1rem;" class="six wide column">
-            <div id="preview-container">
-              <div class="ui search">
-                <h1>Search Listings</h1>
-                <div id="search" class="ui icon input search">
-                  <input
-                    style="width: 100%;"
-                    id="search-semantic"
-                    class="prompt"
-                    type="text"
-                    placeholder="Ex. Hair Restoration, Hair Transplant, Laser Therapy"
-                  />
-                  <i id="search-icon" class="search icon"></i>
-                  <div style="margin-left: 8rem;" class="results"></div>
-                </div>
+      <div
+        style="width: 100%; margin: 0px; position: relative; padding-top: 0px;"
+        class="ui grid"
+      >
+        <div id="listings-column" class="nine wide column"></div>
+        <div style="margin-top: 1rem;" class="six wide column">
+          <div id="preview-container">
+            <div class="ui search">
+              <div
+                style="width: 100%; margin-top: 3rem;"
+                class="ui large action input"
+              >
+                <input id="search-search" type="text" placeholder="Search..." />
                 <button
-                  style="margin-top: 1rem;"
-                  class="ui button"
                   id="search-button"
+                  style="background: #2ca6a4; color: white;"
+                  class="ui button"
                 >
                   Search
                 </button>
               </div>
             </div>
-            <div
-              style="margin-top: .5rem; position: relative;"
-              id="map-container"
-            >
-              <div id="map"></div>
-              <div id="demo"></div>
-            </div>
+          </div>
+          <div
+            style="margin-top: .5rem; position: relative;"
+            id="map-container"
+          >
+            <div id="map"></div>
+            <div id="demo"></div>
           </div>
         </div>
       </div>
