--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -91,7 +91,7 @@
         class="ui grid"
       >
         <div id="listings-column" class="nine wide column"></div>
-        <div style="margin-top: 1rem;" class="six wide column">
+        <div  class="six wide column">
           <div id="preview-container">
             <div class="ui search">
               <div
