home social media

--- a/public/index.html
+++ b/public/index.html
@@ -88,8 +88,7 @@
         <!-- menu tags  -->
         <div id="menu-col" class="sixteen wide column">
           <div style="margin-top: 1rem;" class="ui grid">
-            <div class="one wide column"></div>
-            <div class="two wide right aligned column">
+            <div class="two wide center aligned column">
               <a
                 style="display: inline;"
                 class="page-links"
@@ -104,8 +103,7 @@
                 <i class="info icon"></i> About</a
               >
             </div>
-            <div class="six wide column"></div>
-            <div class="two wide right aligned column">
+            <div class="two wide left aligned column">
               <a class="page-links" href="" id="news">
                 <i class="newspaper icon"></i> News</a
               >
@@ -115,7 +113,13 @@
                 <i class="store icon"></i> Store</a
               >
             </div>
-            <div class="one wide column"></div>
+            <div class="four wide column"></div>
+            <div class="four wide right aligned column">
+              <a href="" class="sm-links"> <i class="large instagram icon"></i> </a>
+              <a href="" class="sm-links"> <i class="large facebook icon"></i> </a>
+              <a href="" class="sm-links"> <i class="large linkedin icon"></i> </a>
+              <a href="" class="sm-links"> <i class="large twitter icon"></i> </a>
+            </div>
           </div>
         </div>
         <!-- stock magazine image  -->
