--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
               style="border-bottom: solid; border-color: #8b786d; border-width: 5px;"
               id="listBusiness-button"
             >
-              <p style="color: white;" class="top-button" id="register">
+              <p style="color: white;" class="top-button listBusClick" id="register">
                 <i class="store icon"></i>List Your Business
               </p>
             </div>
@@ -435,6 +435,9 @@
                 <p class="cta-text">
                     The Hair Authority Directory is the best place to be seen by <strong class="rale-strong">Thousands</strong> of people looking for the solution you have!
                 </p>
+                <div class="bus-box-button listBusClick">
+                  List Your Business
+                </div>
         </div>
         <div class="eight wide column">
           <img class="ui big centered image" src="https://pluspng.com/img-png/mac-computer-screen-png-apple-mac-computer-screen-png-1122.png" >
